styles.css
/*This is a test*/
body {

  background: eggshell;

}

/* Using a class-cased styling scheme for names */

main {

  display: flex;
  justify-content: center;

}

td {

    text-align: center;
}

#canvas {

  display: inline-block;
  width: 70vh;
  height: 50vh;
  padding-top: 10vh;
  padding-bottom: 10vh;
  padding-right: 10vh;
  padding-left: 10vh;

}

#center-box {

  display: inline-block;
  font-size:5em;

}


#right-box, #upper-box, #lower-box, #left-box {

  font-size: 1em;
  display: none;

}

.fa {

  color: #42f495;
  text-shadow: 3px 3px 3px lightGrey;

}

.fa.fa-chevron-up {

  display: flex;
  justify-content: center;
  font-size: 5em;

}

.fa.fa-chevron-down {

  display: flex;
  justify-content: center;
  font-size: 5em;

}

.fa.fa-chevron-left {

  float:left;
  justify-content: center;
  font-size: 5em;

}

.fa.fa-chevron-right {

  display: flex;
  justify-content: center;
  font-size: 5em;

}

img#top {

  position: absolute;
  z-index: -1;
  opacity: 0.3;
  left: 0%;
  top: 0%;


}

img#bottom {

  position: absolute;
  z-index: -2;
  opacity: 0.3;
  left: 0%;
  top: 70%;

}


/* Adding media link when shrinking page */

@media screen and (max-width: 600px) {

  body {

    background-color: grey;
    width: 95%;

  }

  html p {

    color: white;
    font-size: 1.1em;

  }

  @media only screen
  and (min-device-width : 375px)
  and (max-device-width : 667px) {

    #canvas {
      width: 50%;
    }
   }

